# duplicate_file_report

./: .pre-commit-config.yaml  pyproject.toml
dirtree/: dirtree.py  hash_file.py
duplicate_file_report/: cltool.py  write_report.py  write_report_dirs.py
hash_tree/: hash_file.py  hash_tree.py  scriptfile.py
report/: cltool.py  write_report.py
tests/: conftest.py  data_files.py  test_fixtures.py  test_hash_file.py  test_hash_tree.py
