[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Thomas Golding", email = "thomas.golding@gmail.com"},
]
dependencies = []
dev-dependencies = [
    "ipython~=7.21",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
