[tool.poetry]
name = "duplicate_file_report"
version = "0.1.0"
description = ""
authors = ["Thomas <thomas.golding@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.3"

[tool.poetry.dev-dependencies]
ipython = "^7.22.0"
pytest = "^6.2.2"
mypy = "^0.812"

[tool.poetry.scripts]
duplicate_report = 'report.cltool:cltool'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
